# named-pipes

./: .gitignore  CLAUDE.md  PipeChannel.cs  Program.cs  README.md  llm_pipe_channel.py  main.py  named-pipe-tools.md  named-pipes.code-workspace  named-pipes.sln  pipe_reader.py  pyproject.toml  utils.py
.claude/: settings.json  settings.local.json
.claude/commands/: gh.md
.github/workflows/: csharp-lint.yml  python-lint.yml  python-tests.yml
docs/superpowers/specs/: 2026-03-19-serve-llm-transformers-design.md
src/MyClientConsole/: PipeChannel.cs  Program.cs
src/llm_client/: main.py
src/my_server_console/: main.py
src/named_pipes/: __init__.py  abstract_pipe_channel.py  basic_pipe_channel.py  llm_pipe_channel.py  pipe_channel.py  transformers_pipe_channel.py
src/named_pipes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/serve_llm/: main.py
tests/: server_llm.py  server_main.py  test_llm_pipe_channel.py  test_pipe_channel.py  test_transformers_pipe_channel.py
tests/PipeChannel.Tests/: LLMPipeChannelTests.cs  PipeChannel.Tests.csproj  PipeChannelTests.cs
tests/csharp/: PipeChannelTests.cs  PipeChannelTests.csproj
