[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "named-pipes"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["psutil"]

[project.optional-dependencies]
llm = ["vllm", "transformers", "torch"]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
